language/move-lang/tests/move_check/typing/subtype_return_invalid.exp
error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/subtype_return_invalid.move:5:9
  │
4 │     fun t0(u: &u64): &mut u64 {
  │               ----   -------- Expected: '&mut u64'
  │               │       
  │               Given: '&u64'
5 │         u
  │         ^ Invalid return expression

error[E04006]: invalid subtype
  ┌─ tests/move_check/typing/subtype_return_invalid.move:9:9
  │
8 │     fun t1(s: &S): &mut S {
  │               --   ------ Expected: '&mut 0x8675309::M::S'
  │               │     
  │               Given: '&0x8675309::M::S'
9 │         s
  │         ^ Invalid return expression

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_return_invalid.move:13:9
   │
12 │     fun t2(u1: &u64, u2: &u64): (&u64, &mut u64) {
   │                          ----          -------- Expected: '&mut u64'
   │                          │              
   │                          Given: '&u64'
13 │         (u1, u2)
   │         ^^^^^^^^ Invalid return expression

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_return_invalid.move:17:9
   │
16 │     fun t3(u1: &u64, u2: &u64): (&mut u64, &u64) {
   │                ----              -------- Expected: '&mut u64'
   │                │                  
   │                Given: '&u64'
17 │         (u1, u2)
   │         ^^^^^^^^ Invalid return expression

error[E04006]: invalid subtype
   ┌─ tests/move_check/typing/subtype_return_invalid.move:21:9
   │
20 │     fun t4(u1: &u64, u2: &u64): (&mut u64, &mut u64) {
   │                ----              -------- Expected: '&mut u64'
   │                │                  
   │                Given: '&u64'
21 │         (u1, u2)
   │         ^^^^^^^^ Invalid return expression

